--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div data-screen class="screen"></div>
         <div class="btns">
             <button data-btn>Action 1</button>
-            <button data-del>Action  2</button>
+            <button data-btn>Action 2</button>
             <button data-btn>Action 3</button>
             <button data-btn>Action 4</button>
             <button data-btn>Action 5</button>
