Added click the buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div id="grid-actions">    
-        <h3>Steve Webb Action Grid</h3>
+        <h3>Steve Webb Action Grid <small> (Click the buttons)</small></h3>
         <div data-screen class="screen"></div>
         <div class="btns">
             <button data-btn>Action 1</button>
